# vscode-extension-of-the-week

./: .flake8  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  README.md  md2html  md2html2  new  publish  pyproject.toml  requirements.txt  template.md  update-toc
VSCode Extension of the Week/: style.css
VSCode Extension of the Week/2022/: 33 jumpy.md  33_jumpy.md  34 autoDocstring.md  34_autoDocstring.md  35_project-manager.md  36_csak-ext-timer.md  37_gitlens.md  38_vscode-status-bar-format-toggle.md  39_vscode-markdown-paste-image.md  40_vscode-fileutils.md
dev/: Dockerfile  Makefile  md2html  publish
dev/git_hooks/: pre-commit
img/: EotW Banner.psd
src/eotw/: __init__.py  cli.py  md2html.py  post.py  toc.py
src/eotw/templates/: index.md  post.md  subindex.md  toc.md  toc_multi.md
src/templates/: index.md  post.md  toc.md
