# Python packaging & distribution
[build-system]
requires = ["setuptools >= 63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eotw"
description = "VSCode Extension of the Week."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"
authors = [
    { "name" = "Jannis Mainczyk", "email" = "jannis.mainczyk@iis.fraunhofer.de" },
]
dependencies = [
    "md2cf==1.5.0",
    "jinja2==3.1.4",
    "pyfiglet==0.8.post1",
    "questionary==1.10.0",
    "python-frontmatter==1.0.0",
    "typer==0.6.1",
]
[project.optional-dependencies]
dev = ["flake8", "black", "isort"]

[project.scripts]
eotw = "eotw.cli:app"

# Python tooling

[tool.black]
line-length = 105
target-version = ["py310"]
extend_exclude = "ext"

# https://github.com/timothycrosley/isort
[tool.isort]
profile = "black"
py_version = 38
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 105
known_first_party = ["eotw"]
